Bug #24190 many exportable definitions of field_in_record_is_null
Submitted: 10 Nov 2006 15:21 Modified: 28 Nov 2006 21:49
Reporter: Andrei Elkin
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.1.13 OS:
Assigned to: Andrei Elkin Target Version:

[10 Nov 2006 15:21] Andrei Elkin
Description:
The fact showes up with running some tests with innodb e.g
mysql-test-run --debug row_basic_3innodb

Created slave.trace file has the following stack

T@56665182: | | | >ha_innobase::update_row
T@56665182: | | | | >ha_federated::field_in_record_is_null

It appeares to be a real problem when i challenged the server with gdb.
It also showed that field_in_record_is_null of ha_federated.cc was called at
innodb's function, instead of its own inline.

inlining was turned off by using -O0 for compilation.

How to repeat:
build the server with CFLAGS= -O0 ... CXXFLAGS= -O0 ..., you might need to
remove -Wuninitialized as well.
Just do this:

BUILD/complile-pentium-valgrind-max -n > mybuild
sed -i -e 's/-O1/-O0/g' mybuild ;
sed -i -e 's/-Wuninitialized//g' mybuild
chmod a+x mybuild
./mybuild

cd mysql-test;
./mysql-test-run --debug row_basic_3innodb
#
# to find the claimed:
#
grep -2 'ha_federated::field_in_record_is_null' var/log/slave.trace

Suggested fix:
add static visibility to the function definitions.
[10 Nov 2006 15:24] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15136

ChangeSet@1.2322, 2006-11-10 17:22:43+02:00, aelkin@dsl-hkibras-fe30f900-107.dhcp.inet.fi
+2 -0
  Bug #24190  many exportable definitions of field_in_record_is_null
  
  mysql had several(2) exportable definitions of field_in_record_is_null function.
  
  Fixed with adding static.
[20 Nov 2006 16:40] Lars Thalmann
Pushed into 5.1.14.
[28 Nov 2006 21:49] Paul DuBois
Noted in 5.1.14 changelog.

The server source code had multiple exportable definitions of the
field_in_record_is_null() function. These are now all declared
static.