Bug #24190  many exportable definitions of field_in_record_is_null

mysql had several(2) exportable definitions of field_in_record_is_null function.

Fixed with adding static.


storage/federated/ha_federated.cc:
  made static
storage/innobase/handler/ha_innodb.cc:
  made static